samples/_failures_safe/1761532949_8a087d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6788154e.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_6788154e.c:160:33: error: missing terminating " character
  160 |         "NUMBER", "IDENTIFIER", "
      |                                 ^
./samples/SAFE/__tmp_6788154e.c:160:9: error: expected expression at end of input
  160 |         "NUMBER", "IDENTIFIER", "
      |         ^~~~~~~~
./samples/SAFE/__tmp_6788154e.c:160:9: error: expected declaration or statement at end of input
